# streamix

./: .gitignore  Cargo.toml  package-lock.json  package.json
src/: App.css  App.tsx  main.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/mpv/: commands.rs  embed_macos.rs  ffi.rs  mod.rs  player.rs
src-tauri/src/stremio/: client.rs  commands.rs  ffmpeg.rs  mod.rs  models.rs  mpv.rs  server.rs  store.rs  torrent.rs  transcoder.rs
src/api/: stremio.ts
src/components/: AppHeader.tsx  MetaCard.tsx  MovieCard.tsx  MpvPlayer.tsx  Player.tsx  TabBar.tsx
src/pages/: Addons.tsx  Catalog.tsx  Explore.tsx  MetaDetails.tsx  MovieDetails.tsx
src/streamio/: client.rs  models.rs
src/stremio/: cache.rs  mod.rs  models.rs  server.rs  torrent.rs
src/types/: index.ts
src/ui/: addons.rs  catalog.rs  details.rs  mod.rs  utils.rs  window.rs
