[package]
name = "streamix"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk = { package = "gtk4", version = "0.9", features = ["v4_8"] }
adw = { package = "libadwaita", version = "0.7", features = ["v1_4"] }
libmpv2 = "5.0" # Modern fork of libmpv bindings
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
