[package]
name = "streamix"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "streamix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
librqbit = "8.0"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tokio-util = { version = "0.7", features = ["io"] }
directories = "5.0"
urlencoding = "2.1"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
url = { version = "2.4", features = ["serde"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
anyhow = "1"
